# azul

./: .gitignore  Cargo.toml  README.md  build.bat  default_config.toml
azul/: Cargo.toml
azul/src/: main.rs
backend_server/: Cargo.toml
backend_server/src/: game_manager.rs  human_player.rs  logging.rs  main.rs  shared_state.rs  websocket_api.rs
game/: Cargo.toml
game/src/: error.rs  factories.rs  formatting.rs  game_manager.rs  game_state.rs  lib.rs  match_.rs  move_.rs  move_list.rs  pattern.rs  player.rs  shared_state.rs  tile_color.rs  time_control.rs  wall.rs
notes/: no_plies.md
player/: Cargo.toml
player/src/: command_line_player.rs  greedy_player.rs  lib.rs  random_player.rs
player/src/mcts/: edge.rs  event.rs  heuristic_move_generation.rs  mod.rs  node.rs  node2.rs  player.rs  playout.rs  time_control.rs  tree.rs  value.rs
player/src/mcts/neural_network/: _encoding.rs  accumulator.rs  factory_encoding.rs  hashing.rs  layers.rs  mod.rs  model.rs  pattern_line_encoding.rs  score_encoding.rs  wall_encoding.rs
player/src/mcts/neural_network/encoding/: factory_encoding.rs  mod.rs  pattern_line_encoding.rs  score_encoding.rs  wall_encoding.rs
player/src/mcts/neural_network/encoding_v2/: bag.rs  factories.rs  mod.rs  pattern_lines.rs  score.rs  wall.rs
playground/: Cargo.toml
playground/src/: main.rs
python_package/: Cargo.toml  pyproject.toml
python_package/src/: lib.rs
python_package/src/python_game/: game_state.rs  mod.rs  move_.rs  player_marker.rs  tile_color.rs  time_control.rs
python_package/src/python_player/: dataloader.rs  mcts.rs  mod.rs
replay_buffer/: Cargo.toml
replay_buffer/src/: api.rs  buffer.rs  client.rs  lib.rs  main.rs
scripts/: automated_test.py  bitboard_row_combinations.py  build_and_move.py  build_wheels.py  encoding.ipynb  neural_network_test.ipynb  plot.ipynb  test.ipynb  test2.ipynb  test3.ipynb  test_dataloader.py  test_python_package.ipynb  test_server.py  train.ipynb
shared/: Cargo.toml
shared/src/: logging.rs
test_client/: Cargo.toml
test_client/src/: main.rs
test_server/: Cargo.toml
test_server/src/: client.rs  main.rs
