[workspace]
members = [
    "game",
    "playground",
    "player",
    "test_server",
    "test_client", "azul", "python_package", "replay_buffer", "shared",
]
resolver = "2"

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
debug = false

[profile.release-with-debug]
inherits = "release"
debug = true
