[package]
name = "backend_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
game = { path = "../game" }
player = { path = "../player" }

tokio = { version = "1.33", features = ["full"] }
tokio-tungstenite = { version = "0.20.1", features = ["native-tls"] }
futures = "0.3.28"

serde_json = "1.0.107"
hyper = { version = "0.14.27", features = ["server"] }
serde = "1.0.189"
log = "0.4.20"
log4rs = "1.2.0"
async-mutex = "1.4.0"
uuid = { version = "1.5.0", features = ["v4"] }
lazy_static = "1.4.0"

async-trait = "0.1.51"