[package]
name = "game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8.5", features = ["small_rng"] }
async-trait = "0.1.51"
async-mutex = "1.4.0"
tokio = { version = "1.12.0", features = ["full"] }

log = "0.4.20"
log4rs = "1.2.0"
