[package]
name = "player"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
game = { path = "../game" }
rand = { version = "0.8.5", features = ["small_rng"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ndarray = "0.15.4"

[features]
mute = []