[package]
name = "playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
game = { path = "../game" }
rand = { version = "0.8.5", features = ["small_rng"] }
player = { path = "../player" }
replay_buffer = { path = "../replay_buffer" }
rayon = "1.5.1"
shared = { path = "../shared" }

[features]
two_players = []
three_players = []
four_players = []
