[package]
name = "python_package"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = { version = "0.21.2", features = ["extension-module"] }
game = { path = "../game" }
rand = { version = "0.8.5", features = ["small_rng"] }
