[package]
name = "python_package"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
game = { path = "../game" }
player = { path = "../player" }

pyo3 = { version = "0.21.2", features = ["extension-module"] }
rand = { version = "0.8.5", features = ["small_rng"] }

[features]
three_players = ["game/three_players"]
four_players = ["game/four_players"]
mute = ["player/mute"]