[package]
name = "python_package"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
game = { path = "../game" }
player = { path = "../player" }
replay_buffer = { path = "../replay_buffer" }
shared = { path = "../shared" }

log = "0.4.20"
pyo3 = { version = "0.21.2", features = ["extension-module"] }
rand = { version = "0.8.5", features = ["small_rng"] }
ndarray = "0.15.4"
numpy = "0.21.0"
lazy_static = "1.4.0"

[features]
# three_players = ["game/three_players"]
# four_players = ["game/four_players"]
mute = ["player/mute"]

two_players = []
three_players = []
four_players = []
