[package]
name = "replay_buffer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "replay_buffer"
path = "src/main.rs"

[dependencies]
game = { path = "../game" }
shared = { path = "../shared" }
log = "0.4.20"
tokio = { version = "1.37", features = ["full"] }
tokio-tungstenite = "0.21.0"
tungstenite = "0.21.0"
futures-util = "0.3.30"
lazy_static = "1.4.0"
async-mutex = "1.4.0"
rand = "0.8.4"
serde = "1.0.197"
serde_json = "1.0.116"
