[package]
name = "test_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
game = { path = "../game" }
tokio = { version = "1.33", features = ["full"] }
async-trait = "0.1.51"
clap = { version = "4.4.8", features = ["derive"] }
config = "0.14.0"
serde = { version = "1.0", features = ["derive"] }
rand = { version = "0.8.5", features = ["small_rng"] }
async-mutex = "1.4.0"
log = "0.4.20"
